--- a/MQ2AutoForage.vcxproj
+++ b/MQ2AutoForage.vcxproj
@@ -20,6 +20,7 @@
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectGuid>{3BCC4234-D7E3-457C-BB1D-F6CEED58104E}</ProjectGuid>
+    <ProjectName>MQ2AutoForage</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
